--- a/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
+++ b/app/invoicecreation/webapp/view/ASNReportDetail.view.xml
@@ -2,7 +2,7 @@
 	xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar" xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout" xmlns:tnt="sap.tnt" class="sapUiSizeCompact">
 		<Page id="pageId" title="Invoice Creation" titleAlignment="Center" showHeader="true" showNavButton="true" navButtonPress="onNavPress">
 			<OverflowToolbar id="_IDGenOverflowToolbar1">
-			<ObjectStatus text="STATUS : {detailModel>/InvoiceStatus}" state="{=${detailModel>/InvoiceStatus} === 'Completed' ? 'Success' : 'Error' }"></ObjectStatus>
+			<ObjectStatus text="STATUS : {detailModel>/DocumentRows/results/0/InvoiceStatus}" state="{=${detailModel>/InvoiceStatus} === 'VOUCHER POSTING DONE' ? 'Success' : 'Warning' }"></ObjectStatus>
                <ToolbarSpacer id="_IDGenToolbarSpacer1" />
                 <Button
                     id="submitBtnId"
@@ -71,13 +71,13 @@
 						<Label id="_IDGenLabel12" design="Bold" text="MRN Date"/>
                         <Text id="_IDGenText12" text="{detailModel>/MRNDate}"/>
 						<Label id="_IDGenLabel13" design="Bold" text="MRN Created By"/>
-                        <Text id="_IDGenText13" text="{detailModel>/VendorCode}"/>
+                        <Text id="_IDGenText13" text="{detailModel>/MRNCreatedBy}"/>
 						<Label id="_IDGenLabel14" design="Bold" text="MRN Delivery Location"/>
                         <Text id="_IDGenText14" text="{detailModel>/MRNDeliveryLocation}"/>
-						<Label id="_IDGenLabel15" design="Bold" text="Total MRN Amount As Per PO"/>
-                        <Text id="_IDGenText15" text="{detailModel>/TotalMRNAmountAsperPO}"/>
+						<Label id="_IDGenLabel15" design="Bold" text="Total MRN Amount As Per PO ({detailModel>/DocumentRows/results/0/Currency})"/>
+                        <Text id="_IDGenText15" text="{path:'detailModel>/TotalMRNAmountAsperPO',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 						<Label id="_IDGenLabel16" design="Bold" text="Total MRN Quantity"/>
-                        <Text id="_IDGenText16" text="{detailModel>/TotalMRNQuantity}"/>
+                        <Text id="_IDGenText16" text="{detailModel>/TotalMRNQuantity} {detailModel>/DocumentRows/results/0/UOM}"/>
                     </f:content>
                 </f:SimpleForm>
             </Panel>
@@ -110,34 +110,37 @@
 								<Text text="UOM"/>
 							</Column> -->
 							<Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
-								<Text text="PO Amt as per Received Qty"/>
+								<Text text="PO Amt as per Received Qty ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Tax Amount"/>
+								<Text text="Tax Rate %"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Other Charges"/>
+								<Text text="Tax Amount ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Freight Amount"/>
+								<Text text="Other Charges ({detailModel>/DocumentRows/results/0/Currency})"/>
+							</Column>
+							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
+								<Text text="Freight Amount ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
-								<Text text="Packing Amount"/>
+								<Text text="Packing Amount ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Invoice Amount"/>
+								<Text text="Invoice Amount ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Actual Tax Rate"/>
+								<Text text="Actual Tax Amount ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Other Charges as per Invoice"/>
+								<Text text="Other Charges as per Invoice ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Freight Amount as per Invoice"/>
+								<Text text="Freight Amount as per Invoice ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 							<Column minScreenWidth="Tablet" demandPopin="true" width="8rem">
-								<Text text="Packing Amount as per Invoice"/>
+								<Text text="Packing Amount as per Invoice ({detailModel>/DocumentRows/results/0/Currency})"/>
 							</Column>
 						</columns>
 						<items>
@@ -149,16 +152,17 @@
 									<Text text="{detailModel>BatchNumber}"/>
 									<Text text="{detailModel>QuantityReceived} {detailModel>UOM}"/>
 									<!-- <Text text="{detailModel>UOM}"/> -->
-									<Text text="{detailModel>POAmount}"/>
-									<Text text="{detailModel>TaxAmount}"/>
-									<Text text="{detailModel>OtherCharges}"/>
-									<Text text="{detailModel>FrieghtAmount}"/>
-									<Text text="{detailModel>Packing}"/>
-									<Input value="{detailModel>InvoiceAmount}"/>
-									<Input value="{detailModel>ActualTaxAmount}"/>
-									<Input value="{detailModel>ActualOtherCharges}"/>
-									<Input value="{detailModel>ActualFrieghtAmount}"/>
-									<Input value="{detailModel>ActualPacking}"/>
+									<Text text="{path:'detailModel>POAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Text text="{detailModel>TaxPercentage}"/>
+									<Text text="{path:'detailModel>TaxAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Text text="{path:'detailModel>OtherCharges',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Text text="{path:'detailModel>FrieghtAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Text text="{path:'detailModel>Packing',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Input value="{path:'detailModel>MRNLineValue',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Input value="{path:'detailModel>ActualTaxAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Input value="{path:'detailModel>ActualOtherCharges',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Input value="{path:'detailModel>ActualFrieghtAmount',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
+									<Input value="{path:'detailModel>ActualPacking',formatter:'sap.fiori.invoicecreation.controller.formatter.formatAmount'}"/>
 									</cells>
 							</ColumnListItem>
 						</items>
